	  compiled in due to insufficient conditional logic.  From Luciano Neri
	  (SourceForge patch #40) (2014-4-29).
	* arch/arm/include/stm32/chip.h, src/stm32/Kconfig, stm32_allocateheap.c,
	  configs/nucleo-f401re/nsh/defconfig, and scripts/ld.script:  Numerous
	  changes, most correcting memory usage on the Nucleo-F401RE (2014-4-30).
	* /drivers/mtd/w25.c: Extended by Mark Whitehorn to support the 8Mbit
	  W25Q80BV part (2014-4-30).
	* configs/sam4s-xplained-pro:  Update LED control logic from Bob Doiron
	  (2014-4-30).
	* drivers/timer.c and include/nuttx/timer.h: Enhanced timer interface
	  from Bob Doiron (2014-4-30).
	* arch/arm/src/sam34/Kconfig and sam_tc.c: Enhanced timer/counter driver
	  from Bob Doiron (2014-4-30).
	* configs/sam4s-xplained-pro/Kconfig, nsh/defconfig, and src/sam_tc.c:
	  The SAM4S Xplained Pro now uses the extended timer/counter features.
	  From Bob Doiron (2014-4-30).
	* include/nuttx/arch.h and sched/os_internal.h:  If the CPU load
	  measurements are being driven by an external clock, then the prototype
	  for sched_process_cpuload() must be available in include/nuttx/arch.h
	  (2014-4-30).
	* Documentation/NuttShell.html and many defconfig files:  The alternate
	  console device CONFIG_NSH_CONDEV must not be defined unconditionally.
	  This causes errors when using Telnet sessions.  This was solved by
	  adding CONFIG_NSH_ALTCONDEV: CONFIG_NSH_ALTCONDEV enables or disables
	  the feature then, if enabled, CONFIG_NSH_CONDEV provides the alternative
	  console device name (2014-5-5).
	* arch/arm/src/sam34/sam_rtt.c/.h:  RTT driver from Bob Doiron.  Also
	  added high resolution RTC emulation using the RTT for the sub-second
	  counter (2014-5-5).
	* configs/sam4s-xplained-pro:  Clean-up of LED usage and also some
	  integration of new timer features.  From Bob Doiron  (2014-5-5).
	* drivers/timer.c and include/nuttx/timer.h:  Timer driver updates from
	  Bob Doiron (2014-5-5).